--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
 
 <div class="container" ng-controller="MainCtrl as ctrl">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2 col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+
       <div class="jumbotron text-center main-panel">
         <h2 class="title">PomPom</h2>
         <h1 id="time-display" class="time-display">30:00</h1>
 
         <div class="btn-group btn-group-sm">
-          <button class="btn btn-sm btn-default" ng-click="">30 min.</button>
-          <button class="btn btn-sm btn-default" ng-click="">5 min.</button>
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setLength(30)">30 min.</button>
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setLength(5)">5 min.</button>
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setLength(1)">1 min.</button>
         </div>
         <br>
         <br>
-        <div class="btn-group btn-group">
-          <button class="btn btn-success" ng-click="ctrl.start(30)">Start</button>
-          <button class="btn btn-danger" ng-click="ctrl.stop()">Stop</button>
+        <div class="">
+          <button class="btn btn-primary" ng-click="ctrl.start()"
+                  ng-disabled="ctrl.running">Start
+          </button>
+          <button class="btn btn-danger" ng-click="ctrl.onStopClick()"
+                  ng-disabled="!ctrl.running">Stop
+          </button>
         </div>
-
       </div>
+
     </div>
   </div>
 </div>
