refactor remaining time display

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="jumbotron text-center main-panel">
         <h2 class="title">PomPom</h2>
-        <h1 id="time-display" class="time-display">30:00</h1>
+        <h1 id="time-display" class="time-display" ng-bind="ctrl.timeDisplay">30:00</h1>
 
         <div class="btn-group btn-group-sm">
           <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
