--- a/index.html
+++ b/index.html
@@ -47,15 +47,31 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Session Complete!</h4>
+            <h4 class="modal-title" id="myModalLabel">Session Complete</h4>
           </div>
           <div class="modal-body">
-            Your session is complete!
-            <br> Press 'Break' to take a 5-minute break, or 'Snooze' if you need a little extra time.
+
+            <!-- completion message for full sessions -->
+            <span ng-show="ctrl.showBreakMsg()">
+              Your <span ng-bind=ctrl.lastSessionDesc>session</span> is complete!
+              <br> Press 'Break' to take a 5-minute break, or 'Snooze' if you need a little extra time.
+            </span>
+            <!-- completion message for breaks -->
+            <span ng-show="ctrl.showStartMsg()">
+              Your <span ng-bind=ctrl.lastSessionDesc>session</span> is complete!
+              <br> Press 'Start' to start a 30-minute session, or 'Snooze' if you need a little extra time.
+            </span>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success pull-left" data-dismiss="modal" ng-click="ctrl.startBreak()">Break
+
+            <!-- "start a break" button -->
+            <button type="button" class="btn btn-success pull-left" data-dismiss="modal" ng-show="ctrl.showBreakMsg()" ng-click="ctrl.startBreak()">Break
             </button>
+            <!-- "start full session" button -->
+            <button type="button" class="btn btn-success pull-left" data-dismiss="modal" ng-show="ctrl.showStartMsg()" ng-click="ctrl.startFull()">Start
+            </button>
+
             <button type="button" class="btn btn-warning pull-left" data-dismiss="modal" ng-click="ctrl.startSnooze()">Snooze
             </button>
             <button type="button" class="btn btn-primary" data-dismiss="modal">Close
