--- a/index.html
+++ b/index.html
@@ -10,85 +10,92 @@
 
 <body ng-app="pompom">
 
-  <div class="container" ng-controller="MainCtrl as ctrl">
-    <div class="row">
-      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+<div class="container" ng-controller="MainCtrl as ctrl">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
 
-        <div class="jumbotron text-center main-panel">
-          <h2 class="title">PomPom</h2>
-          <h1 id="time-display" class="time-display" ng-bind="ctrl.timeDisplay">30:00</h1>
+      <div class="jumbotron text-center main-panel">
+        <h2 class="title">PomPom</h2>
+        <h1 id="time-display" class="time-display" ng-bind="ctrl.timeDisplay">30:00</h1>
 
-          <div class="btn-group btn-group-sm">
-            <button class="btn btn-sm btn-default" ng-disabled="ctrl.running" ng-click="ctrl.setFullSession()">Full
-            </button>
-            <button class="btn btn-sm btn-default" ng-disabled="ctrl.running" ng-click="ctrl.setBreakSession()">Break
-            </button>
-            <button class="btn btn-sm btn-default" ng-disabled="ctrl.running" ng-click="ctrl.setMiniSession()">Mini
-            </button>
-          </div>
-          <br>
-          <br>
-          <div class="btn-group">
-            <button class="btn btn-primary" ng-click="ctrl.onStartClick()" ng-disabled="ctrl.running">Start
-            </button>
-            <button class="btn btn-danger" ng-click="ctrl.onStopClick()" ng-disabled="!ctrl.running">Stop
-            </button>
-          </div>
-          <br>
-          <h4 class="main-panel-footer">Current: <span ng-bind="ctrl.currentSession.desc">30-Minute Session</span></h4>
+        <div class="btn-group btn-group-sm">
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setFullSession()">Full
+          </button>
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setBreakSession()">Break
+          </button>
+          <button class="btn btn-sm btn-default" ng-disabled="ctrl.running"
+                  ng-click="ctrl.setMiniSession()">Mini
+          </button>
         </div>
-
+        <br>
+        <br>
+        <div class="btn-group">
+          <button class="btn btn-primary" ng-click="ctrl.onStartClick()" ng-disabled="ctrl.running">Start
+          </button>
+          <button class="btn btn-danger" ng-click="ctrl.onStopClick()" ng-disabled="!ctrl.running">Stop
+          </button>
+        </div>
+        <br>
+        <h4 class="main-panel-footer">Current: <span ng-bind="ctrl.currentSession.desc">30-Minute Session</span></h4>
       </div>
+
     </div>
+  </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="expiredModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Session Complete</h4>
-          </div>
-          <div class="modal-body">
+  <!-- Modal -->
+  <div class="modal fade" id="expiredModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+            aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Session Complete</h4>
+        </div>
+        <div class="modal-body">
 
-            <!-- completion message for full sessions -->
+          <!-- completion message for full sessions -->
             <span ng-show="ctrl.showBreakMsg()">
               Your <span ng-bind=ctrl.previousSession.desc>session</span> is complete!
             <br> Press 'Break' to take a 5-minute break, or 'Snooze' if you need a little extra time.
             </span>
-            <!-- completion message for breaks -->
+          <!-- completion message for breaks -->
             <span ng-show="ctrl.showStartMsg()">
               Your <span ng-bind=ctrl.previousSession.desc>session</span> is complete!
             <br> Press 'Start' to start a 30-minute session, or 'Snooze' if you need a little extra time.
             </span>
 
-          </div>
-          <div class="modal-footer">
+        </div>
+        <div class="modal-footer">
 
-            <!-- "start a break" button -->
-            <button type="button" class="btn btn-success pull-left" data-dismiss="modal" ng-show="ctrl.showBreakMsg()" ng-click="ctrl.startBreak()">Break
-            </button>
-            <!-- "start full session" button -->
-            <button type="button" class="btn btn-success pull-left" data-dismiss="modal" ng-show="ctrl.showStartMsg()" ng-click="ctrl.startFull()">Start
-            </button>
+          <!-- "start a break" button -->
+          <button type="button" class="btn btn-success pull-left" data-dismiss="modal"
+                  ng-show="ctrl.showBreakMsg()" ng-click="ctrl.startBreak()">Break
+          </button>
+          <!-- "start full session" button -->
+          <button type="button" class="btn btn-success pull-left" data-dismiss="modal"
+                  ng-show="ctrl.showStartMsg()" ng-click="ctrl.startFull()">Start
+          </button>
 
-            <button type="button" class="btn btn-warning pull-left" data-dismiss="modal" ng-click="ctrl.startSnooze()">Snooze
-            </button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Close
-            </button>
-          </div>
+          <button type="button" class="btn btn-warning pull-left" data-dismiss="modal"
+                  ng-click="ctrl.startSnooze()">Snooze
+          </button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close
+          </button>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="app/libs/jquery.js"></script>
-  <script src="app/libs/bootstrap.js"></script>
-  <script src="app/libs/angular.js"></script>
-  <!--%APP_SCRIPTS%-->
-  <script src="app-build/js/app.js"></script>
-  <script src="app-build/js/main.ctrl.js"></script>
-  <!--%END_APP_SCRIPTS%-->
+<script src="app/libs/jquery.js"></script>
+<script src="app/libs/bootstrap.js"></script>
+<script src="app/libs/angular.js"></script>
+<!--%APP_SCRIPTS%-->
+<script src="app-build/js/app.js"></script>
+<script src="app-build/js/main.ctrl.js"></script>
+<!--%END_APP_SCRIPTS%-->
 </body>
 
 </html>
